@@ -20,6 +20,7 @@ VERSION 2.8-Beta 1
      elements in order not to fool users.
 
   BUGFIXES:
+   * Fix items moving around when expanded in collection browser (BR 305602)
    * Fix typo in Nepomuk query which did not let track numbers show up in Amarok. (BR 311847)
    * Fix bumpy fade-out when first used. (BR 312062)
    * Fix subtle bugs when a lond fade-out is initiated near the song end.
